--- a/Check_Point_Task_02.ipynb
+++ b/Check_Point_Task_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4dDaO9U01aVz9eWL5UIus",
+      "authorship_tag": "ABX9TyMKK3/lJRmGjElWR2CbHjxG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -525,6 +525,119 @@
           "execution_count": 46
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The program is inputted with a list of real numbers seperated by spaces.\n",
+        "Each element of this list is a radius of a circle.\n",
+        "Write a program that output a list of the areas of these circles, with each area rounded to the 10th decimal place.\n",
+        "If an element in the list is less than zero, it must be must skipped when the answer is printed.\n",
+        "Elements must also be seperated by spaces in the output. For the constant pi, use the built-in constant from the math module. Then use round () for rounding. "
+      ],
+      "metadata": {
+        "id": "LoDajqeqKqYX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import pi"
+      ],
+      "metadata": {
+        "id": "7CFuo9ZvNBks"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def area_of_circle():\n",
+        "  inp =input(print('Enter a list containing real numbers seperated by comma:'))\n",
+        "  lis =inp.split(',')\n",
+        "  result = [] \n",
+        "  for i in lis:\n",
+        "    i = float(i)\n",
+        "    if i>= 0:\n",
+        "      area = pi*i*i\n",
+        "      area = round(area, 10)\n",
+        "      result.append(area)\n",
+        "    else:\n",
+        "      continue\n",
+        "\n",
+        "  result = str(result).replace(',', '')\n",
+        "  result = str(result).replace('[', '')\n",
+        "  result = str(result).replace(']', '')\n",
+        "  print(result)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "913-W2UmNRkw"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "23,50,70,88"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qvylJ4ZgT0oi",
+        "outputId": "b1dc7bd7-2f86-44e0-984f-f6a38b846a12"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(23, 50, 70, 88)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area_of_circle()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zoPn3DTRNiY6",
+        "outputId": "e3ec9f7b-9998-48c2-ff26-ae51f0e3cbaf"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a list containing real numbers seperated by comma:\n",
+            "None  90,88,70\n",
+            "25446.9004940773 24328.4935093994 15393.80400259\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nPNXjYqGVlGC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
