--- a/Logistics_Regression_Check_Point.ipynb
+++ b/Logistics_Regression_Check_Point.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5WwNvDjxRw96bTWALMk2C",
+      "authorship_tag": "ABX9TyOtuloOpBf0pb0xvT7odwAZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Logistics Regression**"
+      ],
+      "metadata": {
+        "id": "8SpF7c3l5AD8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Import Libraries**"
+      ],
+      "metadata": {
+        "id": "VmrgLJPi5VUh"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 71,
       "metadata": {
@@ -38,6 +56,15 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Importing DataSet**"
+      ],
+      "metadata": {
+        "id": "romLCOUd5Zxi"
+      }
     },
     {
       "cell_type": "code",
